@@ -5,9 +5,10 @@
 
 #ifdef __SDCC
 #pragma std_sdcc99
+#pragma disable_warning 85
 #endif
 
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_hc08) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_gbz80) && !defined(__SDCC_r2k)
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_hc08) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_gbz80)
 long long x;
 int i;
 
@@ -27,14 +28,18 @@ long long c(void)
   return (12ll);
 }
 
+long long d(int i)
+{
+  return (i);
+}
+
 long long (*gp)(void) = &g;
 #endif
 
 void
 testLongLong (void)
 {
-#if 0
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_hc08) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_gbz80) && !defined(__SDCC_r2k)
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_hc08) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_gbz80)
   i = 42;
   ASSERT (g() == 43);
   i = 23;
@@ -42,7 +47,7 @@ testLongLong (void)
   ASSERT (c() == 12);
   x = 42;
   ASSERT (h() == x);
-#endif
+  ASSERT (d(12) == 12ll);
 #endif
 }
 
