@@ -1,3 +1,9 @@
+2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/longlong.c:
+	  Fixed returning long long, and reenabled test.
+
 2012-03-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/regression/tests/gcc-torture-execute-981001-1.c: Only use
